:loud_sound: Update Crypto Holder and LoggingEnvironmentPostProcessor logging for Property and System